# distlib

./: .gitignore  setup.cfg
distlib/: metadata.py  util.py
tests/: test_all.py
