# -*- coding: utf-8 -*-
#
# Copyright (C) 2021 Vinay Sajip.
# Licensed to the Python Software Foundation under a contributor agreement.
# See LICENSE.txt and CONTRIBUTORS.txt.
#

[metadata]
name = distlib
author = Vinay Sajip
author_email = vinay_sajip@red-dove.com
license = Python license
description = Distribution utilities
url = https://bitbucket.org/pypa/distlib
long_description = Low-level components of distutils2/packaging, augmented with higher-level APIs for making packaging easier.
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
platforms = any

[options]
packages = distlib

[options.package_data]
distlib._backport = sysconfig.cfg
distlib = t32.exe; t64.exe; w32.exe; w64.exe; t64-arm.exe; w64-arm.exe
